# bms-et-sensors-1

./: .aiexclude  .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.almemo  Dockerfile.ap-ui  Dockerfile.graf-app  Dockerfile.matter-app  Dockerfile.messkluppe  Dockerfile.mscl  Dockerfile.pyrometers  Dockerfile.redlab  Dockerfile.svcctl  README.md  bms-et-sensors.code-workspace  docker-compose.override.yml  docker-compose.yml  requirements-dev.txt
app/: __init__.py
app/almemo/: almemo_app.py  requirements.txt  ui.html  ui.js
app/ap/: app.py  host.py
app/graf/: __init__.py  graf_app.py  graf_backend_services.py  graf_csv_helpers.py  graf_data_flows.py  graf_query_builders.py  graf_redlab_state.py  graf_request_helpers.py  graf_routes.py  graf_series_helpers.py  graf_views.py
app/graf/static/: graf_app.js  graf_chart.js  graf_exports.js  graf_ui_state.js  graf_zoom_state.js
app/graf/templates/: _graf_macros.html  index.html
app/matter/: __init__.py  matter_app.py  matter_docker.py  matter_host.py  matter_nodes.py  matter_payload.py  matter_ui.py  otbr_diag.py  requirements.txt  thread_diag.py  thread_diag_store.py  thread_diag_transport.py  thread_topology.py
app/messkluppe/: __init__.py  messkluppe_app.py  messkluppe_mock_node.py  messkluppe_protocol.py  messkluppe_radio_diag.py  messkluppe_radio_rx.py  messkluppe_records.py  requirements.txt
app/messkluppe/legacy_host/: app.py  db.schema.sql  display.py  display.service  messkluppe.service  messkluppe_nrf24.py  requirements.legacy.txt
app/mscl/: mscl_backfill_service.py  mscl_config.py  mscl_export_helpers.py  mscl_export_request_helpers.py  mscl_export_storage_service.py  mscl_sampling_run_service.py  mscl_sampling_service.py  mscl_settings.py  mscl_state.py  mscl_stream_service.py  mscl_ui_helpers.py  requirements.txt
app/mscl/static/: mscl_web_config.js
app/mscl/templates/: mscl_web_config.html
app/pyrometers/: pyrometer_profiles.py  pyrometers_app.py  pyrometers_config.py  pyrometers_protocol.py  pyrometers_stream_state.py  requirements.txt  ui.html  ui.js
app/redlab/: redlab_acquisition.py  redlab_inventory.py  redlab_main.py  requirements.txt
app/redlab/templates/: index.html
app/shared/: device-common.css
app/svcctl/: requirements.txt  svcctl_app.py  svcctl_docker.py  svcctl_host.py  svcctl_usb.py
config/: otbr-web.default
dashboard/nginx/: default.conf
dashboard/simple-dash/: config.json  health.html  index.html
dashboard/simple-dash/docs/: matter-node-quickref.html
docs/: amd64-node-build-host.md  matter-thread-topology.md  messkluppe-bringup.md  messkluppe.md  openthread.md
docs/almemo/: ALMEMO-202S-204-english.txt  ALMEMO-Handbuch-2020.txt  ALMEMO-Manual-2020.txt  protocol-reference.md
docs/micro-epsilon/: thermoMETER.md
grafana/provisioning/dashboards/: main_dash.json
nodes/: .gitignore  AGENTS.md  ESP32-C3-SuperMini.md  ESP32-C6-DevKitC.md  ESP32-C6-Pico.md  ESP32-C6-Zero.md  ESP32-S-CAM.md  LILYGO-T-Energy-S3.md  M5StickC-Plus2.md  M5StickC.md  README.md
nodes/cmake/: patch_esp_matter_nullable.cmake
nodes/components/bms_node_core/: CMakeLists.txt
nodes/esp32c3SuperMini/matter-node/: CMakeLists.txt  sdkconfig.defaults
nodes/esp32c6DevKitC/matter-node/: .gitignore  (+3 more)
nodes/esp32c6zero/multinode/: .gitignore  BOARD_CAPABILITIES.md  CMakeLists.txt  CURRENT_FIRMWARE.md  LOGIC_BUNDLE.md  README.md  partitions.csv  sdkconfig.defaults
nodes/esp32c6zero/multinode/main/: CMakeLists.txt  logic_config.cpp  logic_config.h  main.cpp
nodes/esp32sCam/camera-node/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
nodes/lilygoTEnergyS3/matter-wifi-node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
nodes/lilygoTEnergyS3/matter-wifi-node/main/: CMakeLists.txt  main.cpp
nodes/m5stickc/matter-node/main/: CMakeLists.txt  main.cpp
nodes/m5stickcPlus2/matter-node/: CMakeLists.txt  sdkconfig.defaults
nodes/m5stickcPlus2/matter-node/main/: CMakeLists.txt  main.cpp
nodes/m5stickcPlus2/matter-node/tools/: generate_onboarding_card.py
scripts/: 01-rpi-setup.sh  02-rpi-nm-ap.sh  build-local-all.sh  build-local-almemo.sh  build-local-ap-ui.sh  build-local-graf-app.sh  build-local-matter-app.sh  build-local-messkluppe.sh  build-local-mscl.sh  build-local-pyrometers.sh  build-local-redlab.sh  build-local-svcctl.sh  build-local-x64-all.sh  build-node-esp32c3-supermini.sh  build-node-esp32c6-pico-wifi-sps30.sh  build-node-esp32c6-pico-wifi.sh  build-node-esp32c6-pico.sh  build-node-esp32c6zero-multinode.sh  build-node-lilygo-tenergy-s3.sh  build-node-m5stickc-plus2.sh  build-node-m5stickc.sh  build-push-arm64.sh  build-push-multiarch.sh  clean-docker.sh  cleanup-dockerhub-tags.sh  codex-resume-last.sh  logs.sh  messkluppe-radio-smoke.sh  openthread-host-setup.sh  pyrometers-setup.sh  restart-local.sh  restart-matter-server.sh  restart-mscl-dev.sh  restart-openthread.sh  rpi-nm-ap.sh  rpi-setup.sh  setup-local-python.sh  test-local.sh
scripts/lib/: compose-common.sh  setup-common.sh
tests/: stress_almemo.py  test_almemo_serial_helpers.py  test_ap_ui.py  test_graf_backend_services.py  test_graf_csv_helpers.py  test_graf_redlab_tags.py  test_graf_request_helpers.py  test_graf_routes.py  test_graf_series_helpers.py  test_graf_views.py  test_graf_zoom_state.js  test_grafana_dashboard.py  test_matter_app_routes.py  test_matter_nodes.py  test_matter_payload.py  test_matter_thread_diag.py  test_matter_thread_diag_store.py  test_matter_thread_diag_transport.py  test_matter_thread_topology.py  test_matter_ui.py  test_messkluppe_app.py  test_messkluppe_bringup_docs.py  test_messkluppe_mock_node.py  test_messkluppe_protocol.py  test_messkluppe_radio_diag.py  test_messkluppe_radio_rx.py  test_messkluppe_records.py  test_mscl_backfill_service.py  test_mscl_export_request_helpers.py  test_mscl_export_storage_service.py  test_openthread_diag.py  test_openthread_host_setup.py  test_pyrometer_profiles.py  test_pyrometers_config.py  test_pyrometers_protocol.py  test_pyrometers_stream_state.py  test_redlab_inventory.py  test_svcctl_docker.py  test_svcctl_mscl_guard.py
(+54 files in other folders)
